corrigi diagrama de atividades

--- a/docs/Modelagem/2.2.2.DiagramaDeAtividades.md
+++ b/docs/Modelagem/2.2.2.DiagramaDeAtividades.md
@@ -9,6 +9,6 @@
 ## Análise e Resultado
 
 ## Histórico de Versão
-| Versão | Data       | Descrição                                      | Autor               | | Versão | Data       | Descrição                                      | Autor               | Revisor               |
+| Versão | Data       | Descrição                                      | Autor               | Revisor               |
 |--------|------------|------------------------------------------------|---------------------|-----------------------|
 | 1.0    | 23/11/2024 | Primeira versão do artefato | [Amanda Campos](https://github.com/acamposs) | [Autor](https://github.com/autor) |
