adiciona documentação inicial das modelagens

--- a/docs/Modelagem/2.3.ModelagemOrganizacionalCasosDeUso.md
+++ b/docs/Modelagem/2.3.ModelagemOrganizacionalCasosDeUso.md
@@ -1,9 +1,29 @@
 # 2.3. Módulo Notação UML – Modelagem Organizacional OU Casos de Uso
 
-Foco_3: Modelagem Organizacional OU Casos de Uso.
+## Introdução
+Este documento descreve a modelagem UML organizacional ou de casos de uso para o projeto Tsirko, conforme especificado na entrega 02 da disciplina Arquitetura de Software.
 
-Entrega Mínima: 1 Modelo, sendo esse o Diagrama de Pacotes ou o Diagrama de Casos de Uso.
+### Foco 3: Modelagem Organizacional OU Casos de Uso
+- **Entrega Mínima:** Um modelo, podendo ser um Diagrama de Pacotes ou um Diagrama de Casos de Uso.
 
-Apresentação (em sala) explicando o modelo especificado, com: (i) rastro claro aos membros participantes (MOSTRAR QUADRO DE PARTICIPAÇÕES & COMMITS); (ii) justificativas & senso crítico sobre o modelo, e (iii) comentários gerais sobre o trabalho em equipe. Tempo da Apresentação: +/- 5min. Recomendação: Apresentar diretamente via Wiki ou GitPages do Projeto. Baixar os conteúdos com antecedência, evitando problemas de internet no momento de exposição nas Dinâmicas de Avaliação.
+### Apresentação
+- **Requisitos da Apresentação:**
+    - Explicação do modelo especificado.
+    - Clareza sobre a participação dos membros (mostrar quadro de participações e commits).
+    - Justificativas e senso crítico sobre o modelo.
+    - Comentários gerais sobre o trabalho em equipe.
+    - **Tempo:** Aproximadamente 5 minutos.
+    - **Recomendação:** Apresentar via Wiki ou GitPages do projeto, com conteúdos baixados previamente para evitar problemas de internet.
 
-A Wiki ou GitPages do Projeto deve conter um tópico dedicado ao Módulo Modelagem Organizacional/Casos de Uso (Notação UML), com 1 modelo, histórico de versões, referências, e demais detalhamentos gerados pela equipe nesse escopo.
+## Metodologia
+
+## Diagrama de Pacotes
+
+## Diagrama de Casos de Uso
+
+## Análise e Resultado
+
+## Histórico de Versão
+| Versão | Data       | Descrição                                      | Autor               | Revisor               |
+|--------|------------|------------------------------------------------|---------------------|-----------------------|
+| 1.0    | 23/11/2024 | Primeira versão do artefato | [Amanda Campos](https://github.com/acamposs) | [Autor](https://github.com/autor) |
