--- a/docs/Modelagem/2.1.ModelagemEstatica.md
+++ b/docs/Modelagem/2.1.ModelagemEstatica.md
@@ -1,9 +1,31 @@
 # 2.1. Módulo Notação UML – Modelagem Estática
 
-Foco_1: Modelagem UML Estática.
+## Introdução
+Este documento descreve a modelagem UML estática para o projeto Tsirko, conforme especificado na entrega 02 da disciplin Arquitetura de Software. 
 
-Entrega Mínima: 1 Modelo Estático (ESCOPO: Diagrama de Classes; Diagrama de Componentes ou Diagrama de Implantação).
+### Foco 1: Modelagem UML Estática
+- **Entrega Mínima:** Um modelo estático, podendo ser um Diagrama de Classes, Diagrama de Componentes ou Diagrama de Implantação.
 
-Apresentação (em sala) explicando o modelo estático especificado, com: (i) rastro claro aos membros participantes (MOSTRAR QUADRO DE PARTICIPAÇÕES & COMMITS); (ii) justificativas & senso crítico sobre o modelo, e (iii) comentários gerais sobre o trabalho em equipe. Tempo da Apresentação: +/- 5min. Recomendação: Apresentar diretamente via Wiki ou GitPages do Projeto. Baixar os conteúdos com antecedência, evitando problemas de internet no momento de exposição nas Dinâmicas de Avaliação.
+### Apresentação
+- **Requisitos da Apresentação:**
+    - Explicação do modelo estático especificado.
+    - Clareza sobre a participação dos membros (mostrar quadro de participações e commits).
+    - Justificativas e senso crítico sobre o modelo.
+    - Comentários gerais sobre o trabalho em equipe.
+    - **Tempo:** Aproximadamente 5 minutos.
+    - **Recomendação:** Apresentar via Wiki ou GitPages do projeto, com conteúdos baixados previamente para evitar problemas de internet.
 
-A Wiki ou GitPages do Projeto deve conter um tópico dedicado ao Módulo Modelagem Estática (Notação UML), com 1 modelo, histórico de versões, referências, e demais detalhamentos gerados pela equipe nesse escopo.
+## Metodologia
+
+## Diagrama de Classes
+
+## Diagrama de Componentes
+
+## Diagrama de Implementação
+
+## Análise e Resultado
+
+## Histórico de Versão
+| Versão | Data       | Descrição                                      | Autor               | Revisor               |
+|--------|------------|------------------------------------------------|---------------------|-----------------------|
+| 1.0    | 23/11/2024 | Primeira versão do artefato | [Amanda Campos](https://github.com/acamposs) | [Autor](https://github.com/autor) |
