--- a/docs/Modelagem/2.2.ModelagemDinamica.md
+++ b/docs/Modelagem/2.2.ModelagemDinamica.md
@@ -1,9 +1,33 @@
 # 2.2. Módulo Notação UML – Modelagem Dinâmica
 
-Foco_2: Modelagem UML Dinâmica.
+## Introdução
+Este documento descreve a modelagem UML dinâmica para o projeto Tsirko, conforme especificado na entrega 02 da disciplina Arquitetura de Software.
 
-Entrega Mínima: 1 Modelo Dinâmico (ESCOPO: Diagrama de Sequência; Diagrama de Atividades; Diagrama de Comunicação/Colaboração ou Diagrama de Estados).
+### Foco 2: Modelagem UML Dinâmica
+- **Entrega Mínima:** Um modelo dinâmico, podendo ser um Diagrama de Sequência, Diagrama de Atividades, Diagrama de Comunicação/Colaboração ou Diagrama de Estados.
 
-Apresentação (em sala) explicando o modelo dinâmico especificado, com: (i) rastro claro aos membros participantes (MOSTRAR QUADRO DE PARTICIPAÇÕES & COMMITS); (ii) justificativas & senso crítico sobre o modelo, e (iii) comentários gerais sobre o trabalho em equipe. Tempo da Apresentação: +/- 5min. Recomendação: Apresentar diretamente via Wiki ou GitPages do Projeto. Baixar os conteúdos com antecedência, evitando problemas de internet no momento de exposição nas Dinâmicas de Avaliação.
+### Apresentação
+- **Requisitos da Apresentação:**
+    - Explicação do modelo dinâmico especificado.
+    - Clareza sobre a participação dos membros (mostrar quadro de participações e commits).
+    - Justificativas e senso crítico sobre o modelo.
+    - Comentários gerais sobre o trabalho em equipe.
+    - **Tempo:** Aproximadamente 5 minutos.
+    - **Recomendação:** Apresentar via Wiki ou GitPages do projeto, com conteúdos baixados previamente para evitar problemas de internet.
 
-A Wiki ou GitPages do Projeto deve conter um tópico dedicado ao Módulo Modelagem Dinâmica (Notação UML), com 1 modelo, histórico de versões, referências, e demais detalhamentos gerados pela equipe nesse escopo.
+## Metodologia
+
+## Diagrama de Sequência
+
+## Diagrama de Atividades
+
+## Diagrama de Comunicação
+
+## Diagrama de Estados
+
+## Análise e Resultado
+
+## Histórico de Versão
+| Versão | Data       | Descrição                                      | Autor               | Revisor               |
+|--------|------------|------------------------------------------------|---------------------|-----------------------|
+| 1.0    | 23/11/2024 | Primeira versão do artefato | [Amanda Campos](https://github.com/acamposs) | [Autor](https://github.com/autor) |
