adiciona diagrama de estado

--- a/docs/Modelagem/2.2.4.DiagramaDeEstados.md
+++ b/docs/Modelagem/2.2.4.DiagramaDeEstados.md
@@ -2,13 +2,46 @@
 
 ## Introdução
 
+O diagrama de estados é uma representação gráfica que descreve os estados pelos quais um objeto passa durante seu ciclo de vida, bem como os eventos que causam essas mudanças de estado. Ele é amplamente utilizado na modelagem de sistemas para capturar o comportamento dinâmico dos objetos. Esses diagramas são essenciais para entender como os objetos interagem e respondem a diferentes estímulos ao longo do tempo, proporcionando uma visão clara e detalhada do fluxo de estados e transições.
+
 ## Metodologia
+
+Para a criação dos diagramas de estados, foi utilizada a notação UML (Unified Modeling Language), que é um padrão amplamente aceito para a modelagem de sistemas. A notação UML permite a representação precisa e padronizada dos estados e transições, facilitando a comunicação entre os membros da equipe de desenvolvimento e outras partes interessadas. Cada diagrama foi elaborado com base nas especificações detalhadas do sistema, garantindo que todas as possíveis transições e estados fossem capturados de maneira precisa.
+
+Os diagramas de estado representados na **Figura 1** e na **Figura 3** foram desenvolvidos utilizando a ferramenta **StarUML**, que oferece uma interface intuitiva e recursos avançados para a criação de diagramas UML. Já o diagrama da **Figura 2** foi desenvolvido usando a ferramenta **PlantUML**, que permite a criação de diagramas a partir de uma linguagem de descrição textual, facilitando a edição e a manutenção dos diagramas. Todos os diagramas foram revisados minuciosamente para assegurar a precisão e a clareza das transições de estado, garantindo uma compreensão completa do comportamento dinâmico do sistema.
 
 ## Diagramas de Estados
 
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama de Estados - Henrique Batalha </p></font>
+
+![Diagrama de Estados - Henrique Batalha](docs/assets/Henrique_Batalha_DiagramaDeEstados.png)
+
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/HeBatalha">Henrique Batalha</a>, 2024.</p></font> 
+</div>
+
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 2:</b> Diagrama de Estados - José Filipi</p></font>
+
+![Diagrama de Estados - José Filipi](assets/Jose_Souza_Diagrama_de_Estados.png)
+
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/JoseFilipi">José Filipi</a>, 2024.</p></font> 
+</div>
+
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 3:</b> Diagrama de Estados - Raphael Mendes</p></font>
+
+![Diagrama de Estados - Raphael Mendes](assets/Raphael_DiagramaDeEstados2.png)
+
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Raphides">Raphael Mendes</a>, 2024.</p></font> 
+</div>
+
 ## Análise e Resultado
 
+Os diagramas de estados apresentados fornecem uma visão detalhada das transições de estado dos objetos dentro do sistema. Cada diagrama foi cuidadosamente elaborado para capturar todas as possíveis transições e estados, garantindo uma compreensão clara do comportamento do sistema.
+
 ## Histórico de Versão
+
 | Versão | Data       | Descrição                                      | Autor               | Revisor               |
 |--------|------------|------------------------------------------------|---------------------|-----------------------|
-| 1.0    | 23/11/2024 | Primeira versão do artefato | [Amanda Campos](https://github.com/acamposs) | [Autor](https://github.com/autor) |
+| 1.0    | 23/11/2024 | Primeira versão do artefato                    | [Amanda Campos](https://github.com/acamposs) | [Autor](https://github.com/autor) |
