adiciona versão final do driagrama de estados

--- a/docs/Modelagem/2.2.ModelagemDinamica.md
+++ b/docs/Modelagem/2.2.ModelagemDinamica.md
@@ -24,7 +24,16 @@ Este documento descreve a modelagem UML dinâmica para o projeto Tsirko, conform
 ## Diagrama de Comunicação
 
 ## Diagrama de Estados
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 1:</b><a href="https://admin.lucid.app/documents/embedded/5f4b3733-dd85-44ec-90a7-46e42a58fdff"> Versão Final do Diagrama de Estados</a></p></font>
 
+![Diagrama de Estados](docs\assets\VersaoFinal_DiagramaDeEstados.png)
+
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/acamposs">Amanda Campos</a>, <a 
+href="https://github.com/HeBatalha">Henrique Batalha</a>, <a 
+href="https://github.com/JoseFilipi">José Filipi</a>, <a 
+href="https://github.com/Raphides">Raphael Mendes</a>, 2024.</p></font> 
+</div>
 ## Análise e Resultado
 
 ## Histórico de Versão
