Diagrama De Comunicacao Final.md

--- a/docs/Modelagem/2.2.3.DiagramaDeComunicacao.md
+++ b/docs/Modelagem/2.2.3.DiagramaDeComunicacao.md
@@ -2,13 +2,64 @@
 
 ## Introdução
 
+Para entender como as diversas partes de uma aplicação se conectam e trabalham em conjunto, foi criado um diagrama de comunicação. Esse diagrama é uma representação gráfica que mostra como os diferentes componentes da aplicação se comunicam em um sistema. Ele nos ajuda a visualizar o caminho que as informações percorrem e como cada parte contribui para o funcionamento geral do sistema.
+
 ## Metodologia
 
-## Diagramas de Comunicação 
+A partir dos requisitos elicitados no projeto e com base no protótipo, foi possível, com o auxílio da ferramenta draw.io representar em forma de diagrama os fluxos encontrados na navegação do site Tsírko. Nesses fluxos foram criadas as entidades existentes no site bem como as ações do usuário com a resposta do sistema. O processo foi feito tanto do ponto de vista de um usuário quanto de um admnistrador de eventos.
+
+## Diagramas de Comunicação
+
+Logo abaixo é mostrado as figuras que representam as atividades do site Tsírko no diagramas de comunicação.
+
+Link para visualização do diagrama: [Diagrama](https://drive.google.com/file/d/1gYy6B_yJ8mtfLwcaAP85ZO-f8Ennr_SJ/view?usp=sharing)
+
+### Diagrama do usuário
+
+A figura 1 a seguir representa a modelagem da atividade do usuário para a compra do ingresso, configuração de  alerta, matrícula em aula e acesso à wiki.
+
+![Diagrama de Comunicação - Versão Final](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Carlos_Gabriel_DiagramaDeComunicacaoFinal1.png)
+Autor: Carlos Gabriel, 2024
+
+
+### Diagrama do administrador
+A figura 2 a seguir representa a modelagem da atividade do administrador para a criação do evento.
+
+![Diagrama de Comunicação - Versão Final](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Carlos_Gabriel_DiagramaDeComunicacaoFinal2.png)
+Autor: Carlos Gabriel, 2024
 
 ## Análise e Resultado
+Diagrama 1: Interação - Configurar Alerta, Comprar Ingresso, Matricular
 
-## Histórico de Versão
-| Versão | Data       | Descrição                                      | Autor               | Revisor               |
-|--------|------------|------------------------------------------------|---------------------|-----------------------|
+Este diagrama é focado nas ações dos usuários na plataforma, envolvendo processos como configuração de alertas, pesquisa de locais, compra de ingressos e matrícula em aulas.
+
+- O diagrama abrange diversos fluxos em uma única visão (alertas, eventos, matrículas), o que oferece um panorama detalhado das funcionalidades.
+- Há menção explícita de integração com serviços externos, como a API Pix para gerar QR Codes e API de geolocalização para buscar locais.
+- O diagrama captura momentos em que o usuário toma decisões importantes, como escolher locais e horários, antes de concluir uma compra ou matrícula.
+
+
+Diagrama 2: Interação - Criar Evento
+
+Este diagrama representa o fluxo de ações realizadas por um administrador na criação de um evento. Ele destaca as etapas essenciais para configurar um evento, como nome, data, horário, descrição, capacidade e preço, resultando na publicação do evento.
+
+
+- As etapas estão bem definidas e o fluxo é direto. Cada ação é associada a um elemento específico do sistema, como "Nome", "Data", etc.
+- A inclusão de um passo inicial de autenticação do administrador antes de acessar o painel de gerenciamento reflete boas práticas de segurança.
+- Cada etapa do processo é isolada, o que facilita a leitura e implementação no sistema.
+
+
+## Referência Bibliográfica
+> UNB. Aula Modelagem UML Dinâmica. Professora Milene. Disponível em: https://arquivos.unb.br/arquivos/2024159118945d30645175f6a9bd650b0/Arquitetura_e_Desenho_de_Software_-_Aula_Modelagem_UML_Dinmica_-_Profa._Milene.pdf. Acesso em: 27 nov. 2024.
+
+> UML DIAGRAMS. Disponível em: https://www.uml-diagrams.org/. Acesso em: 27 nov. 2024.
+
+
+
+## Histórico de versões
+
+| Versão | Data       | Descrição                                   | Autor(es)       | Revisor(es) |
+| ------ | ---------- | ------------------------------------------- | --------------- | ----------- |
 | 1.0    | 23/11/2024 | Primeira versão do artefato | [Amanda Campos](https://github.com/acamposs) | [Autor](https://github.com/autor) |
+| 1.1    | 27/11/2024 | Criação do artefato Diagrama de Comunicação | [Carlos Gabriel](https://github.com/TheCarlosRamos) | [Isaque Santos](https://github.com/IsaqueSH) [Amanda Campos](https://github.com/acamposs) [Rodrigo Bezerra](https://github.com/Rodrigomfab88)           |
+
+
