--- a/docs/Modelagem/2.3.2.DiagramaDeCasosDeUso.md
+++ b/docs/Modelagem/2.3.2.DiagramaDeCasosDeUso.md
@@ -2,13 +2,59 @@
 
 ## Introdução
 
+Casos de uso são essenciais na modelagem de sistemas, servindo como uma ferramenta importante para representar graficamente os requisitos funcionais. Eles descrevem como o sistema interage com os usuários para alcançar objetivos específicos. Em termos simples, os casos de uso detalham as ações que um sistema ou um conjunto de sistemas deve executar em colaboração com um ou mais usuários externos. Essa abordagem facilita a compreensão das funcionalidades desejadas, aprimorando a comunicação entre desenvolvedores e stakeholders, sendo fundamental que seja clara e objetiva.
+
 ## Metodologia
+A partir dos requisitos levantados, os alunos [Carlos](https://github.com/TheCarlosRamos), [Henrique](https://github.com/HeBatalha), [Isaque](https://github.com/IsaqueSH), [João Pedro](https://github.com/joaopedrodasilvarodrigues) e [Rodrigo](https://github.com/Rodrigomfab88) elaboraram os primeiros prototipos e a partir deles foi feito um novo Diagrama feito por [Gabriel](https://github.com/gabrielfreitass1), [Henrique](https://github.com/HeBatalha), [José Filipi](https://github.com/JoseFilipi) e [Raphael](https://github.com/Raphides) em grupo. Foram Utilizadas diversas ferramentas utilizadas para a elaboração dos diagramas entre eles o PlantUML, Draw.io e Lucidchart.
+
 
 ## Diagramas de Casos de Uso
 
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama Casos de Uso Carlos Gabriel Ramos</p></font>
+
+![Figura1](docs/assets/Carlos_Gabriel_DiagramaDeCasosDeUso.png)
+
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/TheCarlosRamos">Carlos Gabriel Ramos</a>, 2024.</p></font> 
+</div>
+
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 2:</b> Diagrama Casos de Uso Henrique Batalha</p></font>
+
+![Figura2](docs/assets/Henrique_Batalha_DiagramaDeCasosDeUso.png)
+
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/HeBatalha">Henrique Batalha</a>, 2024.</p></font> 
+</div>
+
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 3:</b> Diagrama Casos de Uso Isaque Santos</p></font>
+
+![Figura3](docs/assets/Isaque_Santos_DiagramaCasosdeUso.png)
+
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/IsaqueSH">Isaque Santos</a>, 2024.</p></font> 
+</div>
+
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 4:</b> Diagrama Casos de Uso João Pedro da Silva</p></font>
+
+![Figura4](docs/assets/Joao_Pedro_DiagramaDeCasosDeUso.png)
+
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/joaopedrodasilvarodrigues">João Pedro da Silva</a>, 2024.</p></font> 
+</div>
+
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 5:</b> Diagrama Casos de Uso Rodrigo Mattos de Figueredo</p></font>
+
+![Figura5](docs\assets\Rodrigo_DiagramaDeCasosDeUso.png)
+
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Rodrigomfab88">Rodrigo Mattos de Figueredo</a>, 2024.</p></font> 
+</div>
+
 ## Análise e Resultado
+
+Os diagramas de Casos de Usos criados individualmente pelos integrantes do grupo providenciam diferentes visões em relação ao funcionamento do sistema, isso tudo foi levado em consideração na elaboração do diagrama final de Casos de Uso. 
 
 ## Histórico de Versão
 | Versão | Data       | Descrição                                      | Autor               | Revisor               |
 |--------|------------|------------------------------------------------|---------------------|-----------------------|
-| 1.0    | 23/11/2024 | Primeira versão do artefato | [Amanda Campos](https://github.com/acamposs) | [Autor](https://github.com/autor) |
+| 1.0    | 27/11/2024 | Primeira versão dos Casos de Uso| [Gabriel Freitas](https://github.com/gabrielfreitass1) <br> [Henrique](https://github.com/HeBatalha) <br> [José Filipi](https://github.com/JoseFilipi) | [Autor](https://github.com/autor) |
