Alterações das urls das imagens e referencias

--- a/docs/Modelagem/2.3.2.DiagramaDeCasosDeUso.md
+++ b/docs/Modelagem/2.3.2.DiagramaDeCasosDeUso.md
@@ -13,7 +13,7 @@ A partir dos requisitos levantados, os alunos [Carlos](https://github.com/TheCar
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama Casos de Uso Carlos Gabriel Ramos</p></font>
 
-![Figura1](docs/assets/Carlos_Gabriel_DiagramaDeCasosDeUso.png)
+![Figura1](https://media.discordapp.net/attachments/1305500218804011059/1311128106886627328/Carlos_Gabriel_DiagramaDeCasosDeUso.png?ex=67490c34&is=6747bab4&hm=070e7b371b75e7c2112deff5612ab4b9de8d60a454e11c3cc3e71f241fc21631&=&format=webp&quality=lossless&width=1112&height=676)
 
 <font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/TheCarlosRamos">Carlos Gabriel Ramos</a>, 2024.</p></font> 
 </div>
@@ -21,7 +21,7 @@ A partir dos requisitos levantados, os alunos [Carlos](https://github.com/TheCar
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 2:</b> Diagrama Casos de Uso Henrique Batalha</p></font>
 
-![Figura2](docs/assets/Henrique_Batalha_DiagramaDeCasosDeUso.png)
+![Figura2](https://cdn.discordapp.com/attachments/1305500218804011059/1311534438701731870/image.png?ex=67493521&is=6747e3a1&hm=de4ed4d01b6938b03e8b7cdf02de5993d4690bde43e998c031534223ce3d2d95&)
 
 <font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/HeBatalha">Henrique Batalha</a>, 2024.</p></font> 
 </div>
@@ -29,7 +29,7 @@ A partir dos requisitos levantados, os alunos [Carlos](https://github.com/TheCar
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 3:</b> Diagrama Casos de Uso Isaque Santos</p></font>
 
-![Figura3](docs/assets/Isaque_Santos_DiagramaCasosdeUso.png)
+![Figura3](https://media.discordapp.net/attachments/1305500218804011059/1311128107209592954/Isaque_Santos_DiagramaCasosdeUso.png?ex=67490c34&is=6747bab4&hm=6d57177c27230c0b1703844c658fbd715505209b741d8b127299828f02973655&=&format=webp&quality=lossless&width=708&height=676)
 
 <font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/IsaqueSH">Isaque Santos</a>, 2024.</p></font> 
 </div>
@@ -37,7 +37,7 @@ A partir dos requisitos levantados, os alunos [Carlos](https://github.com/TheCar
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 4:</b> Diagrama Casos de Uso João Pedro da Silva</p></font>
 
-![Figura4](docs/assets/Joao_Pedro_DiagramaDeCasosDeUso.png)
+![Figura4](https://cdn.discordapp.com/attachments/1305500218804011059/1311128107465576448/Joao_Pedro_DiagramaDeCasosDeUso.png?ex=67490c34&is=6747bab4&hm=e3076ef84fee3e1457260414b78ede368b008081c3b46fe16cdbfc272130ace5&)
 
 <font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/joaopedrodasilvarodrigues">João Pedro da Silva</a>, 2024.</p></font> 
 </div>
@@ -45,16 +45,25 @@ A partir dos requisitos levantados, os alunos [Carlos](https://github.com/TheCar
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 5:</b> Diagrama Casos de Uso Rodrigo Mattos de Figueredo</p></font>
 
-![Figura5](docs\assets\Rodrigo_DiagramaDeCasosDeUso.png)
+![Figura5](https://media.discordapp.net/attachments/1305500218804011059/1311128106551214100/Rodrigo_DiagramaDeCasosDeUso.png?ex=67490c34&is=6747bab4&hm=49dbc58108a2080eb5d1e77ef06edfa0409e3de24fc657048ca49239a56a102a&=&format=webp&quality=lossless&width=1440&height=247)
+
 
 <font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Rodrigomfab88">Rodrigo Mattos de Figueredo</a>, 2024.</p></font> 
 </div>
 
 ## Análise e Resultado
 
-Os diagramas de Casos de Usos criados individualmente pelos integrantes do grupo providenciam diferentes visões em relação ao funcionamento do sistema, isso tudo foi levado em consideração na elaboração do diagrama final de Casos de Uso. 
+Os diagramas de Casos de Usos criados individualmente pelos integrantes do grupo providenciam diferentes visões em relação ao funcionamento do sistema, isso tudo foi levado em consideração na elaboração do diagrama final de Casos de Uso.
+
+## Referência Bibliográfica
+> USP. Casos de Uso e Diagrama de
+Casos de Uso. Professora Dra. Elisa Yumi Nakagawa. Disponível em: https://edisciplinas.usp.br/pluginfile.php/3720765/course/section/857581/Aula02_CasosDeUso.pdf. Acesso em: 26 nov. 2024.
+
+> UML DIAGRAMS USE CASE DIAGRAMS. Disponível em: https://www.uml-diagrams.org/use-case-diagrams.html. Acesso em: 26 nov. 2024.
 
 ## Histórico de Versão
 | Versão | Data       | Descrição                                      | Autor               | Revisor               |
 |--------|------------|------------------------------------------------|---------------------|-----------------------|
-| 1.0    | 27/11/2024 | Primeira versão dos Casos de Uso| [Gabriel Freitas](https://github.com/gabrielfreitass1) <br> [Henrique](https://github.com/HeBatalha) <br> [José Filipi](https://github.com/JoseFilipi) | [Autor](https://github.com/autor) |
+| 1.0    | 27/11/2024 | Primeira versão dos Casos de Uso| [Gabriel Freitas](https://github.com/gabrielfreitass1) <br> [Henrique Batalha](https://github.com/HeBatalha) <br> [José Filipi](https://github.com/JoseFilipi) | [Raphael](https://github.com/Raphides) |
+| 1.1    | 28/11/2024 | Atualização das imagens e Referencias Bibliograficas| [Gabriel Freitas](https://github.com/gabrielfreitass1)|  |
+
