--- a/docs/Modelagem/2.2.ModelagemDinamica.md
+++ b/docs/Modelagem/2.2.ModelagemDinamica.md
@@ -29,11 +29,13 @@ Este documento descreve a modelagem UML dinâmica para o projeto Tsirko, conform
 
 ![Diagrama de Estados](docs\assets\VersaoFinal_DiagramaDeEstados.png)
 
-<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/acamposs">Amanda Campos</a>, <a 
-href="https://github.com/HeBatalha">Henrique Batalha</a>, <a 
-href="https://github.com/JoseFilipi">José Filipi</a>, <a 
-href="https://github.com/Raphides">Raphael Mendes</a>, 2024.</p></font> 
+<font size="3"><p style="text-align: center"><b>Autor:</b> 
+<a href="https://github.com/acamposs">Amanda Campos</a>, 
+<a href="https://github.com/HeBatalha">Henrique Batalha</a>, 
+<a href="https://github.com/JoseFilipi">José Filipi</a>,
+<a href="https://github.com/Raphides">Raphael Mendes</a>, 2024.</p></font> 
 </div>
+
 ## Análise e Resultado
 
 ## Histórico de Versão
