adiciona diagrama de estado e diagrama de comunicação na modelagem dinamica

--- a/docs/Modelagem/2.2.3.DiagramaDeComunicacao.md
+++ b/docs/Modelagem/2.2.3.DiagramaDeComunicacao.md
@@ -6,47 +6,48 @@ Para entender como as diversas partes de uma aplicação se conectam e trabalham
 
 ## Metodologia
 
-A partir dos requisitos elicitados no projeto e com base no protótipo, foi possível, com o auxílio da ferramenta draw.io representar em forma de diagrama os fluxos encontrados na navegação do site Tsírko. Nesses fluxos foram criadas as entidades existentes no site bem como as ações do usuário com a resposta do sistema. O processo foi feito tanto do ponto de vista de um usuário quanto de um admnistrador de eventos.
+A partir dos requisitos elicitados no projeto e com base no protótipo, foi possível, com o auxílio da ferramenta **draw.io** representar em forma de diagrama os fluxos encontrados na navegação do site Tsírko. Nesses fluxos foram criadas as entidades existentes no site bem como as ações do usuário com a resposta do sistema. 
 
 ## Diagramas de Comunicação
 
-Logo abaixo é mostrado as figuras que representam as atividades do site Tsírko no diagramas de comunicação.
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama de Comunicação - Carlos Gabriel </p></font>
 
-Link para visualização do diagrama: [Diagrama](https://drive.google.com/file/d/1gYy6B_yJ8mtfLwcaAP85ZO-f8Ennr_SJ/view?usp=sharing)
+![ Diagrama de Comunicação - Carlos Gabriel](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/refs/heads/main/docs/assets/Carlos_Gabriel_DiagramaDeComunicacao.png)
 
-### Diagrama do usuário
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/TheCarlosRamos">Carlos Gabriel</a>, 2024.</p></font> 
+</div>
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 2:</b>  Diagrama de Comunicação - Gabriel Freitas</p></font>
 
-A figura 1 a seguir representa a modelagem da atividade do usuário para a compra do ingresso, configuração de  alerta, matrícula em aula e acesso à wiki.
+![ Diagrama de Comunicação - Gabriel Freitas](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/refs/heads/main/docs/assets/Gabriel_DiagramaDeComunicacao.drawio.png)
 
-![Diagrama de Comunicação - Versão Final](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Carlos_Gabriel_DiagramaDeComunicacaoFinal1.png)
-Autor: Carlos Gabriel, 2024
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/gabrielfreitass1">Gabriel Freitas</a>, 2024.</p></font> 
+</div>
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 3:</b>  Diagrama de Comunicação - Magno Luiz </p></font>
 
+![ Diagrama de Comunicação - Magno Luiz](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/refs/heads/main/docs/assets/Magno_DiagramaDeComunicao.png)
 
-### Diagrama do administrador
-A figura 2 a seguir representa a modelagem da atividade do administrador para a criação do evento.
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/magnluiz">Magno Luiz</a>, 2024.</p></font> 
+</div>
 
-![Diagrama de Comunicação - Versão Final](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Carlos_Gabriel_DiagramaDeComunicacaoFinal2.png)
-Autor: Carlos Gabriel, 2024
 
 ## Análise e Resultado
-Diagrama 1: Interação - Configurar Alerta, Comprar Ingresso, Matricular
 
-Este diagrama é focado nas ações dos usuários na plataforma, envolvendo processos como configuração de alertas, pesquisa de locais, compra de ingressos e matrícula em aulas.
+A análise dos diagramas de comunicação apresentados revela como os componentes do sistema Tsírko interagem entre si e com os usuários. Cada diagrama ilustra diferentes cenários de uso e a troca de mensagens entre as entidades envolvidas.
 
-- O diagrama abrange diversos fluxos em uma única visão (alertas, eventos, matrículas), o que oferece um panorama detalhado das funcionalidades.
-- Há menção explícita de integração com serviços externos, como a API Pix para gerar QR Codes e API de geolocalização para buscar locais.
-- O diagrama captura momentos em que o usuário toma decisões importantes, como escolher locais e horários, antes de concluir uma compra ou matrícula.
+### Diagrama de Comunicação - Henrique Batalha
+O diagrama de Henrique Batalha destaca a interação entre o usuário e o sistema durante o processo de login. Ele mostra claramente as mensagens trocadas entre o usuário, a interface de login e o servidor de autenticação, evidenciando a sequência de validação das credenciais e a resposta do sistema.
 
+### Diagrama de Comunicação - José Filipi
+O diagrama de José Filipi foca na navegação do usuário pelo catálogo de produtos. Ele detalha as mensagens enviadas pelo usuário ao selecionar categorias e produtos, bem como as respostas do sistema ao exibir as informações solicitadas. Esse diagrama é crucial para entender o fluxo de dados e a experiência do usuário ao explorar o catálogo.
 
-Diagrama 2: Interação - Criar Evento
+### Diagrama de Comunicação - Raphael Mendes
+O diagrama de Raphael Mendes aborda o processo de finalização de compra. Ele mapeia as interações entre o usuário, o carrinho de compras, o sistema de pagamento e o servidor de confirmação. As mensagens trocadas durante a adição de itens ao carrinho, a escolha do método de pagamento e a confirmação da compra são claramente representadas, facilitando a compreensão do fluxo de compra.
 
-Este diagrama representa o fluxo de ações realizadas por um administrador na criação de um evento. Ele destaca as etapas essenciais para configurar um evento, como nome, data, horário, descrição, capacidade e preço, resultando na publicação do evento.
-
-
-- As etapas estão bem definidas e o fluxo é direto. Cada ação é associada a um elemento específico do sistema, como "Nome", "Data", etc.
-- A inclusão de um passo inicial de autenticação do administrador antes de acessar o painel de gerenciamento reflete boas práticas de segurança.
-- Cada etapa do processo é isolada, o que facilita a leitura e implementação no sistema.
-
+### Conclusão
+Os diagramas de comunicação fornecem uma visão detalhada das interações no sistema Tsírko, permitindo identificar pontos críticos e oportunidades de melhoria na comunicação entre os componentes. Eles são ferramentas valiosas para garantir que todos os requisitos de interação sejam atendidos e que o sistema funcione de maneira coesa e eficiente.
 
 ## Referência Bibliográfica
 > UNB. Aula Modelagem UML Dinâmica. Professora Milene. Disponível em: https://arquivos.unb.br/arquivos/2024159118945d30645175f6a9bd650b0/Arquitetura_e_Desenho_de_Software_-_Aula_Modelagem_UML_Dinmica_-_Profa._Milene.pdf. Acesso em: 27 nov. 2024.
