--- a/docs/Modelagem/2.2.4.DiagramaDeEstados.md
+++ b/docs/Modelagem/2.2.4.DiagramaDeEstados.md
@@ -8,31 +8,43 @@ O diagrama de estados é uma representação gráfica que descreve os estados pe
 
 Para a criação dos diagramas de estados, foi utilizada a notação UML (Unified Modeling Language), que é um padrão amplamente aceito para a modelagem de sistemas. A notação UML permite a representação precisa e padronizada dos estados e transições, facilitando a comunicação entre os membros da equipe de desenvolvimento e outras partes interessadas. Cada diagrama foi elaborado com base nas especificações detalhadas do sistema, garantindo que todas as possíveis transições e estados fossem capturados de maneira precisa.
 
-Os diagramas de estado representados na **Figura 1** e na **Figura 3** foram desenvolvidos utilizando a ferramenta **StarUML**, que oferece uma interface intuitiva e recursos avançados para a criação de diagramas UML. Já o diagrama da **Figura 2** foi desenvolvido usando a ferramenta **PlantUML**, que permite a criação de diagramas a partir de uma linguagem de descrição textual, facilitando a edição e a manutenção dos diagramas. Todos os diagramas foram revisados minuciosamente para assegurar a precisão e a clareza das transições de estado, garantindo uma compreensão completa do comportamento dinâmico do sistema.
+Os diagramas de estado representados na **Figura 1**, na **Figura 3** e na **Figura 4** foram desenvolvidos utilizando a ferramenta **Draw.io**, que oferece uma interface intuitiva e recursos avançados para a criação de diagramas UML. Já o diagrama da **Figura 2** foi desenvolvido usando a ferramenta **PlantUML**, que permite a criação de diagramas a partir de uma linguagem de descrição textual, facilitando a edição e a manutenção dos diagramas. Todos os diagramas foram revisados minuciosamente para assegurar a precisão e a clareza das transições de estado, garantindo uma compreensão completa do comportamento dinâmico do sistema.
 
 ## Diagramas de Estados
 
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama de Estados - Henrique Batalha </p></font>
 
-![Diagrama de Estados - Henrique Batalha](docs/assets/Henrique_Batalha_DiagramaDeEstados.png)
+![Diagrama de Estados - Henrique Batalha](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/refs/heads/main/docs/assets/Henrique_Batalha_DiagramaDeEstados.png)
 
 <font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/HeBatalha">Henrique Batalha</a>, 2024.</p></font> 
 </div>
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 2:</b> Diagrama de Estados - José Filipi</p></font>
 
-![Diagrama de Estados - José Filipi](assets/Jose_Souza_Diagrama_de_Estados.png)
+![Diagrama de Estados - José Filipi](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/refs/heads/main/docs/assets/Jose_Souza_Diagrama_de_Estados.png)
 
 <font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/JoseFilipi">José Filipi</a>, 2024.</p></font> 
 </div>
 <div align="center">
-<font size="3"><p style="text-align: center"><b>Figura 3:</b> Diagrama de Estados - Raphael Mendes</p></font>
+<font size="3"><p style="text-align: center"><b>Figura 3:</b> Diagrama de Estados 1 - Raphael Mendes</p></font>
 
-![Diagrama de Estados - Raphael Mendes](assets/Raphael_DiagramaDeEstados2.png)
+![Diagrama de Estados - Raphael Mendes](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/refs/heads/main/docs/assets/Raphael_DiagramaDeEstados.png)
 
 <font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Raphides">Raphael Mendes</a>, 2024.</p></font> 
 </div>
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 3:</b> Diagrama de Estados 2 - Raphael Mendes</p></font>
+
+![Diagrama de Estados - Raphael Mendes](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/refs/heads/main/docs/assets/Raphael_DiagramaDeEstados2.png)
+
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Raphides">Raphael Mendes</a>, 2024.</p></font> 
+</div>
+
+## Referência Bibliográfica
+> UNB. Aula Modelagem UML Dinâmica. Professora Milene. Disponível em: https://arquivos.unb.br/arquivos/2024159118945d30645175f6a9bd650b0/Arquitetura_e_Desenho_de_Software_-_Aula_Modelagem_UML_Dinmica_-_Profa._Milene.pdf. Acesso em: 27 nov. 2024.
+
+> UML DIAGRAMS. Disponível em: https://www.uml-diagrams.org/. Acesso em: 27 nov. 2024.
 
 ## Análise e Resultado
 
