refatora analise e resultado do diagrama de comunicação

--- a/docs/Modelagem/2.2.3.DiagramaDeComunicacao.md
+++ b/docs/Modelagem/2.2.3.DiagramaDeComunicacao.md
@@ -35,19 +35,9 @@ A partir dos requisitos elicitados no projeto e com base no protótipo, foi poss
 
 ## Análise e Resultado
 
-A análise dos diagramas de comunicação apresentados revela como os componentes do sistema Tsírko interagem entre si e com os usuários. Cada diagrama ilustra diferentes cenários de uso e a troca de mensagens entre as entidades envolvidas.
+A análise dos diagramas de comunicação apresentados revela como os componentes do sistema Tsírko interagem entre si e com os usuários. Cada diagrama ilustra diferentes cenários de uso, destacando as mensagens trocadas entre os objetos e as sequências de eventos que ocorrem durante a execução das funcionalidades do sistema.
 
-### Diagrama de Comunicação - Henrique Batalha
-O diagrama de Henrique Batalha destaca a interação entre o usuário e o sistema durante o processo de login. Ele mostra claramente as mensagens trocadas entre o usuário, a interface de login e o servidor de autenticação, evidenciando a sequência de validação das credenciais e a resposta do sistema.
-
-### Diagrama de Comunicação - José Filipi
-O diagrama de José Filipi foca na navegação do usuário pelo catálogo de produtos. Ele detalha as mensagens enviadas pelo usuário ao selecionar categorias e produtos, bem como as respostas do sistema ao exibir as informações solicitadas. Esse diagrama é crucial para entender o fluxo de dados e a experiência do usuário ao explorar o catálogo.
-
-### Diagrama de Comunicação - Raphael Mendes
-O diagrama de Raphael Mendes aborda o processo de finalização de compra. Ele mapeia as interações entre o usuário, o carrinho de compras, o sistema de pagamento e o servidor de confirmação. As mensagens trocadas durante a adição de itens ao carrinho, a escolha do método de pagamento e a confirmação da compra são claramente representadas, facilitando a compreensão do fluxo de compra.
-
-### Conclusão
-Os diagramas de comunicação fornecem uma visão detalhada das interações no sistema Tsírko, permitindo identificar pontos críticos e oportunidades de melhoria na comunicação entre os componentes. Eles são ferramentas valiosas para garantir que todos os requisitos de interação sejam atendidos e que o sistema funcione de maneira coesa e eficiente.
+Os diagramas de comunicação fornecem uma visão clara e detalhada das interações dentro do sistema Tsírko, permitindo identificar possíveis pontos de falha e oportunidades de otimização. Eles são essenciais para garantir que todos os componentes do sistema funcionem harmoniosamente e atendam aos requisitos dos usuários de maneira eficiente.
 
 ## Referência Bibliográfica
 > UNB. Aula Modelagem UML Dinâmica. Professora Milene. Disponível em: https://arquivos.unb.br/arquivos/2024159118945d30645175f6a9bd650b0/Arquitetura_e_Desenho_de_Software_-_Aula_Modelagem_UML_Dinmica_-_Profa._Milene.pdf. Acesso em: 27 nov. 2024.
