refatora analise e resultado do diagrama de estados

--- a/docs/Modelagem/2.2.3.DiagramaDeComunicacao.md
+++ b/docs/Modelagem/2.2.3.DiagramaDeComunicacao.md
@@ -39,6 +39,26 @@ A análise dos diagramas de comunicação apresentados revela como os componente
 
 Os diagramas de comunicação fornecem uma visão clara e detalhada das interações dentro do sistema Tsírko, permitindo identificar possíveis pontos de falha e oportunidades de otimização. Eles são essenciais para garantir que todos os componentes do sistema funcionem harmoniosamente e atendam aos requisitos dos usuários de maneira eficiente.
 
+1. **Diagrama de Comunicação - Carlos Gabriel**
+    - Este diagrama demonstra o fluxo de navegação do usuário dentro do sistema.
+    - Mostra como o usuário interage com telas iniciais, menus e subsequentes funcionalidades, como configuração de alertas, pesquisas, e matrículas.
+    - Cada elemento leva a ações específicas, como listar eventos ou gerar QR Codes para ingresso ou matrícula.
+2. **Diagrama de Comunicação - Gabriel Freitas**
+    - Este diagrama apresenta duas interações principais:
+    - **Comprar Ingresso:**
+        - Um espectador/aluno interage com o sistema para buscar eventos, visualizar detalhes e realizar uma compra.
+        - Há passos sequenciais que incluem buscar, visualizar detalhes, decidir pela compra, selecionar quantidade e realizar o pagamento.
+        - Após a confirmação, o sistema gera o ingresso.
+    - **Criar Evento:**
+        - Um circo/professor acessa o sistema para criar eventos, como espetáculos ou aulas.
+        - O sistema processa a criação, atualiza eventos, e confirma que o evento foi criado com sucesso.
+3. **Diagrama de Comunicação - Magno Luiz**
+    - Explora as interações de um usuário com diferentes interfaces do sistema.
+    - O usuário realiza várias ações, como solicitar modalidades, pesquisar locais, acessar mapas, comprar ingressos e configurar notificações.
+    - Os serviços, como o Serviço de Dados, Serviço de Mapas, Serviço de Pagamento, etc., são representados como entidades que processam as solicitações do usuário.
+
+
+
 ## Referência Bibliográfica
 > UNB. Aula Modelagem UML Dinâmica. Professora Milene. Disponível em: https://arquivos.unb.br/arquivos/2024159118945d30645175f6a9bd650b0/Arquitetura_e_Desenho_de_Software_-_Aula_Modelagem_UML_Dinmica_-_Profa._Milene.pdf. Acesso em: 27 nov. 2024.
 
