--- a/docs/Modelagem/2.2.ModelagemDinamica.md
+++ b/docs/Modelagem/2.2.ModelagemDinamica.md
@@ -104,7 +104,7 @@ O diagrama representa o fluxo de transações de estados do sistema realizados p
 Na **figura 5** é possível visualizar a versão final do diagrama.
 
 <div align="center">
-<font size="3"><p style="text-align: center"><b>Figura 5:</b><a href="https://admin.lucid.app/documents/embedded/5f4b3733-dd85-44ec-90a7-46e42a58fdff"> Versão Final do Diagrama de Estados</a></p></font>
+<font size="3"><p style="text-align: center"><b>Figura 5:</b><a href="https://lucid.app/lucidchart/5f4b3733-dd85-44ec-90a7-46e42a58fdff/edit?invitationId=inv_cde7568f-3cee-4395-b4ed-8a921482c14a"> Versão Final do Diagrama de Estados</a></p></font>
 
 ![Diagrama de Estados](docs\assets\VersaoFinal_DiagramaDeEstados.png)
 
