Adiciona versão final do Diagrama de Sequência

--- a/docs/Modelagem/2.2.ModelagemDinamica.md
+++ b/docs/Modelagem/2.2.ModelagemDinamica.md
@@ -19,6 +19,33 @@ Este documento descreve a modelagem UML dinâmica para o projeto Tsirko, conform
 
 ## Diagrama de Sequência
 
+A versão final do Diagrama de Estados foi desenvolvida com base nos diagramas produzidos pelos integrantes da equipe: [João Pedro](https://github.com/joaopedrodasilvarodrigues), [Rodrigo Mattos](https://github.com/Rodrigomfab88), [Vinícius Brito](https://github.com/vini051) e [Yves Gustavo](https://github.com/Yvestxt), disponibilizados no artefato [2.2.1. Diagrama de Sequencia](/docs/Modelagem/2.2.1.DiagramaDeSequencia.md).
+
+Um diagrama de seqüência ilustra a sequência das mensagens entre objetos em uma interação. Um diagrama de sequência consiste em um grupo de objetos representados por linhas de vida e as mensagens que eles trocam durante a interação. Para o Diagrama de Sequência do projeto Tsírko, foram considerados os requisitos elicitados juntamente com as funcionalidades planejadas na Entrega 1. A versão final incorpora elementos essenciais de todas as versões de diagramas de sequência produzidos pelos integrantes da equipe.
+
+Ele destaca a sequência de mensagens entre os seguintes objetos:
+
+- Usuário
+- Plataforma Tsírko
+- Gerenciador de aulas
+- Gerenciador de eventos 
+- Sistema de Pagamentos
+
+Na **figura 1** é possível visualizar a versão final do diagrama.
+
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 1:</b><a href="https://drive.google.com/file/d/1ZXTpFUqGdWvsa-PCG4NBILEOMkdILgQw/view?usp=sharing"> Versão Final do Diagrama de Sequência</a></p></font>
+
+![Diagrama de Sequência](/docs/assets/VersaoFinal_DiagramaDeSequencia.png)
+
+<font size="3"><p style="text-align: center"><b>Autor:</b> 
+<a href="https://github.com/joaopedrodasilvarodrigues">João Pedro</a>, 
+<a href="https://github.com/Rodrigomfab88">Rodrigo Mattos</a>, 
+<a href="https://github.com/vini051">Vinícius Brito</a>,
+<a href="https://github.com/Yvestxt">Yves Gustavo</a>, 2024.</p></font> 
+</div>
+
+
 ## Diagrama de Atividades
 
 ## Diagrama de Comunicação
