--- a/docs/Modelagem/2.2.ModelagemDinamica.md
+++ b/docs/Modelagem/2.2.ModelagemDinamica.md
@@ -39,10 +39,10 @@ Na **figura 1** é possível visualizar a versão final do diagrama.
 ![Diagrama de Sequência](/docs/assets/VersaoFinal_DiagramaDeSequencia.png)
 
 <font size="3"><p style="text-align: center"><b>Autor:</b> 
-<a href="https://github.com/joaopedrodasilvarodrigues">João Pedro</a>, 
-<a href="https://github.com/Rodrigomfab88">Rodrigo Mattos</a>, 
-<a href="https://github.com/vini051">Vinícius Brito</a>,
-<a href="https://github.com/Yvestxt">Yves Gustavo</a>, 2024.</p></font> 
+<a href="https://github.com/acamposs">Amanda Campos</a>, 
+<a href="https://github.com/TheCarlosRamos">Carlos Gabriel</a>, 
+<a href="https://github.com/IsaqueSH">Isaque Santos</a>,
+<a href="https://github.com/Rodrigomfab88">Rodrigo Mattos</a>, 2024.</p></font> 
 </div>
 
 
@@ -154,3 +154,6 @@ Na **figura 5** é possível visualizar a versão final do diagrama.
 | Versão | Data       | Descrição                                      | Autor               | Revisor               |
 |--------|------------|------------------------------------------------|---------------------|-----------------------|
 | 1.0    | 23/11/2024 | Primeira versão do artefato | [Amanda Campos](https://github.com/acamposs) | [Autor](https://github.com/autor) |
+| 2.0    | 27/11/2024 | Adição Diagrama de Comunicação | [Carlos Gabriel](https://github.com/TheCarlosRamos) | [Amanda Campos](https://github.com/acamposs) [Isaque Santos](https://github.com/IsaqueSH") [Rodrigo Mattos](https://github.com/Rodrigomfab88) |
+| 3.0    | 28/11/2024 | Adição Diagrama de Estados | [Amanda Campos](https://github.com/acamposs) | [Carlos Gabriel](https://github.com/TheCarlosRamos) [Isaque Santos](https://github.com/IsaqueSH") [Rodrigo Mattos](https://github.com/Rodrigomfab88) |
+| 4.0    | 28/11/2024 | Adição Diagrama de Sequência | [Rodrigo Mattos](https://github.com/Rodrigomfab88) | [Carlos Gabriel](https://github.com/TheCarlosRamos) [Isaque Santos](https://github.com/IsaqueSH") [Amanda Campos](https://github.com/acamposs) |
